--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -22,18 +22,21 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendars": "^1.1305.0",
     "react-native-element": "^1.2.1",
     "react-native-elements": "^3.4.3",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-maps": "^1.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.0.4",
     "react-native-popup-menu": "^0.16.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.6.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
